--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "P"]
 	path = P
 	url = https://github.com/p-org/P
+[submodule "corral"]
+	path = corral
+	url = https://github.com/boogie-org/corral
