Some more changes

--- a/Tst/TestTranslator.csproj
+++ b/Tst/TestTranslator.csproj
@@ -4,17 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{48B381F1-B893-4ACA-BF5A-1FE5E5688309}</ProjectGuid>
+    <ProjectGuid>{9EEDABEC-E404-4906-8786-29CAA01E5622}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FSExpGen</RootNamespace>
-    <AssemblyName>PBoogieTranslator</AssemblyName>
+    <RootNamespace>ConsoleApplication1</RootNamespace>
+    <AssemblyName>ConsoleApplication1</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>x86</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -32,11 +32,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="FSharp.Core, Version=4.4.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -47,27 +43,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CommandLineParser.cs" />
-    <Compile Include="FSExpGen.cs" />
     <Compile Include="Main.cs" />
+    <Compile Include="Tester.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SymbolTable.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\P\Ext\Formula\Src\Core\Core.csproj">
-      <Project>{1b5724ec-fff1-48d7-a700-ad46f0150afc}</Project>
-      <Name>Core</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\P\Src\Pc\Compiler\Compiler.csproj">
-      <Project>{ed76217f-2452-4a35-90f6-6eb6ccf2d882}</Project>
-      <Name>Compiler</Name>
-    </ProjectReference>
+    <Content Include="Correct.txt" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\BoogieExprTranslator\BoogieExprTranslator.fsproj">
       <Project>{dd849437-50d3-498f-a0b4-2e06b8387aa9}</Project>
       <Name>BoogieExprTranslator</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\PBoogieTranslator\PBoogieTranslator.csproj">
+      <Project>{48b381f1-b893-4aca-bf5a-1fe5e5688309}</Project>
+      <Name>PBoogieTranslator</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\P\Tst\Tools\CheckP\CheckP.csproj">
+      <Project>{d614d3ec-c765-4b47-8002-e683c16c5865}</Project>
+      <Name>CheckP</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
